test/fail/MeasureInTelescope.ma
-- 2012-01-12

let [i : Size] |i| = i
-- should give a parse or scope checking error
